<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/activity_main_first_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/activity_main_first_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/activity_main_last_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/activity_main_last_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/activity_main_sex_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex" />

    <RadioGroup
        android:id="@+id/activity_main_sex_radiogroup"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/activity_main_sex_male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/activity_main_sex_female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />


    </RadioGroup>

    <TextView
        android:id="@+id/activity_main_phone_number_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/activity_main_phone_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="2"  >

        <Button
            android:id="@+id/activity_main_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1" />

        <Button
            android:id="@+id/activity_main_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>